--- a/static/game.html
+++ b/static/game.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="game.css">
     <title>Looks great</title>
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 </head>
 <body>
     <div class="look-canvas">
