--- a/static/feed.html
+++ b/static/feed.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="height=device-height, width=device-width, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="feed.css">
+    <link rel="icon" type="image/png" href="logo.png" />
     <title>Looks great</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
