--- a/static/feed.html
+++ b/static/feed.html
@@ -33,6 +33,7 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+    <div id="menu-icon"></div>
     <div id="feed">
 
     </div>
