--- a/static/feed.html
+++ b/static/feed.html
@@ -33,7 +33,9 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
-    <div id="menu-icon"></div>
+    <div id="menu-icon-container">
+        <div id="menu-icon"></div>
+    </div>
     <div id="feed">
 
     </div>
