--- a/static/feed.html
+++ b/static/feed.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="height=device-height, width=device-width, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="tabs.css">
     <link rel="stylesheet" href="feed.css">
     <link rel="icon" type="image/png" href="logo.png" />
     <title>Looks great</title>
@@ -54,7 +55,22 @@
         </div>
     </nav>
     <div id="feed">
+        <div id="tabs-container">
+            <div class="tab-wrapper tab__active" id="tab-wrapper__random"
+                 onclick="set_tab_active('#random-feed-container', '#tab-wrapper__random');">
+                <div class="tab-name">Random</div>
+            </div>
+            <div class="tab-wrapper" id="tab-wrapper__top"
+                 onclick="set_tab_active('#top-feed-container', '#tab-wrapper__top');">
+                <div class="tab-name">Most liked</div>
+            </div>
+        </div>
+        <div id="random-feed-container" class="tab__container">
 
+        </div>
+        <div id="top-feed-container" class="tab__container">
+
+        </div>
     </div>
 </div>
 </body>
