--- a/static/feed.html
+++ b/static/feed.html
@@ -65,10 +65,10 @@
                 <div class="tab-name">Most liked</div>
             </div>
         </div>
-        <div id="random-feed-container" class="tab__container">
+        <div id="random-feed-container" class="tab-container">
 
         </div>
-        <div id="top-feed-container" class="tab__container">
+        <div id="top-feed-container" class="tab-container">
 
         </div>
     </div>
