--- a/static/game.html
+++ b/static/game.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="height=device-height, width=device-width, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="verify-admitad" content="32946bb156" />
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="game.css">
     <title>Looks great</title>
