--- a/static/feed.html
+++ b/static/feed.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="feed.js"></script>
 </head>
 <body>
+<!-- verify-admitad: "94f6fac1b0" -->
 <script>
   window.fbAsyncInit = function() {
     FB.init({
